# adventofcode

./: README.md
2020/: .gitignore  2020.sln
2020/AdventCommon/: AdventCommon.vcxproj
2020/Day1/: Day1.vcxproj
2020/Day1/src/: main.cpp
2020/Day10/: Day10.vcxproj
2020/Day10/src/: main.cpp
2020/Day11/: Day11.vcxproj
2020/Day11/src/: WaitingArea.cpp  WaitingArea.h  main.cpp
2020/Day12/: Day12.vcxproj
2020/Day12/src/: Ship.cpp  Ship.h  main.cpp
2020/Day13/: Day13.vcxproj
2020/Day13/src/: main.cpp
2020/Day14/: Day14.vcxproj
2020/Day14/src/: main.cpp
2020/Day15/: Day15.vcxproj
2020/Day15/src/: main.cpp
2020/Day16/: Day16.vcxproj
2020/Day16/src/: main.cpp
2020/Day2/: Day2.vcxproj
2020/Day2/src/: main.cpp
2020/Day3/: Day3.vcxproj
2020/Day3/src/: main.cpp
2020/Day4/: Day4.vcxproj
2020/Day4/src/: Passport.cpp  Passport.h  main.cpp
2020/Day5/: Day5.vcxproj
2020/Day5/src/: Seat.cpp  (+2 more)
2020/Day6/: Day6.vcxproj
2020/Day7/: Day7.vcxproj
2020/Day8/: Day8.vcxproj
2020/Day9/: Day9.vcxproj
2021/1/: day1.go
2021/10/: day10.go
2021/11/: day11.go
2021/12/: day12.go
2021/2/: day2.go
2021/3/: day3.go
2021/4/: day4.go
2021/5/: day5.go
2021/6/: day6.go
2021/7/: day7.go
2021/8/: day8.go
2021/9/: day9.go
2021/utility/: utilities.go
2022/src/: main.rs
2023/: .clang-format  .env  CMakeLists.txt  Makefile
2023/src/: main.c
2023/src/01/: entry.c  main.c  main.h
2023/src/20231201/: entry.c  entry.h  main.h
2023/src/common/: cmd.c  cmd.h  config.h  day.h  dynarray.h  help.c  help.h  io.c  io.h  util.c  util.h
(+35 files in other folders)
